--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
                         <div id="social-links">
                             <p>Socials</p>
                             <div id="links">
-                                <a href=""><img src="assets/github.svg" alt="GitHub" class="social-icons">GitHub</a>   
-                                <a href=""><img src="assets/instagram.svg" alt="Instagram" class="social-icons">Instagram</a>       
-                                <a href=""><img src="assets/linkedin.svg" alt="LinkedIn" class="social-icons">LinkedIn</a>
+                                <a href="https://github.com/Shednas"><img src="assets/github.svg" alt="GitHub" class="social-icons">GitHub</a>   
+                                <a href="https://www.instagram.com/weebtaku12"><img src="assets/instagram.svg" alt="Instagram" class="social-icons">Instagram</a>       
+                                <a href="https://www.linkedin.com/in/sandesh-thapa-537b8337b"><img src="assets/linkedin.svg" alt="LinkedIn" class="social-icons">LinkedIn</a>
                             </div>
                         </div>
                     </div>
@@ -190,4 +190,5 @@
         </main>
         <script src="script.js"></script>
     </body>
+
 </html>
